--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^2.2.2
   json_annotation: ^4.8.1
   cupertino_icons: ^1.0.6
+  intl: ^0.18.1  # atau versi terbaru
 
 
 dev_dependencies:
